--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,24 @@
-== *1.1 Napló*
+:toc:
+:toc-title: Tartalomjegyzék
+
+== *1.1 Fordítási útmutató*
+A projlab mappában futtasd a következő parancsot:
+
+=== Linux
+
+[source, bash]
+----
+  ./gradlew run
+----
+
+=== Windows
+[, cmd]
+----
+./gradlew.bat run
+----
+
+
+== *2.1 Napló*
 
 [cols= "1,1,1,1"]
 |===
@@ -12,4 +32,9 @@ Tasi +
 Borbély +
 | Értekezlet:  Döntések: Feladatok szétosztása, konzultáció átbeszélése
 
+| 2023.04.15
+| 30 perc
+|Borbély +
+| Tevékenység: Fordítási útmutató elkészítése, Tartalomjegyzék elkészítése
 |===
+
