Lepessel kapcsolatos dolgok kesz vannak Mainben van switch case 1-19-ig, minden szekvenciadiagramhoz egy teszteset

--- a/README.adoc
+++ b/README.adoc
@@ -74,7 +74,7 @@ Borbély +
 | Tevékenység: Lépéssel kapcsolatos funkciók elkezedése
 
 | 2023.04.16 16:00
-| 1 óra
+| 1 óra 20 perc
 | Hölbling
 | Tevékenység: Lépéssel kapcsolatos funkciók folytatása
 
