--- a/README.adoc
+++ b/README.adoc
@@ -101,5 +101,11 @@ Borbély +
 | 20 perc
 | Hölbling
 | Tevékenység: Lépéssel kapcsolatos funkciókban kisebb javítások
+
+| 2023.04.17 12:00
+| 4 ora
+| Ignath
+| Tevékenység: UseCase 8-10 tesztek es hozza kapcsolodo fuggvenyek elkeszitese
+
 |===
 
